# cookiecutter-pypackage

./: 404.html  cookiecutter.json  index.html  sitemap.xml
console_script_setup/: index.html
contributing/: index.html
docs/: tutorial.md
faq/: index.html
pypi_release_checklist/: index.html
search/: search_index.json
tutorial/: index.html
{{cookiecutter.project_slug}}/: CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: pull-request.yml  push.yml  release.yml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.pkg_name}}.py
